fixed overflow and scroll

--- a/portfolio/src/Styles.css
+++ b/portfolio/src/Styles.css
@@ -106,14 +106,14 @@ body {
 }
 
 .title {
-   text-decoration-line: underline;
-   text-decoration-color:#12edf2;
-   text-decoration-thickness: 3px;
-   text-underline-offset:22px;
-   letter-spacing: 10px;
-   font-size: 90px;
+    text-decoration-line: underline;
+    text-decoration-color: #12edf2;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 22px;
+    letter-spacing: 10px;
+    font-size: 90px;
     font-family: 'Tangerine', cursive;
-   
+
     color: #060606;
     margin-right: 20px;
 }
@@ -127,7 +127,7 @@ body {
 }
 
 .text-description {
-    font-size: 26px;
+    font-size: 28px;
 }
 
 button {
@@ -144,86 +144,58 @@ button {
 
 button:hover {
     background-color: #03063e;
-    /* Darker blue on hover */
 }
-
-
 
 .logo-container {
     width: 100%;
     display: flex;
-    /* Use flexbox to center the logo */
     justify-content: center;
-    /* Center the logo horizontally */
     position: relative;
-    /* Position relative to the flow of the document */
-    margin-top: 30px;
-    /* Adds space between the header and the logo */
-    z-index: 10;
-    /* Ensure the logo is on top */
+    z-index: 10px;
 }
 
 .logo-container img {
-    max-width: 100%;
-    /* Prevent image overflow */
-    height: auto;
-    /* Maintain aspect ratio */
-    object-fit: contain;
-    /* Make sure the logo is properly sized */
-}
+    max-width: 12%;
+     object-fit: contain;
+  }
 
 .project-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
-    padding: 20px;
-    margin-top: 50px;
-    /* Add some space below the logo and header */
+    padding: 10px;
+    margin-top: 20px;
 }
 
 .card {
-    width: calc(20%);
-    height: 300px;
+    width: calc(20% - 30px);
+    height: 250px;
     box-shadow: 10px 10px 10px rgb(26, 27, 27);
     text-align: center;
     transition: transform 0.3s ease-in-out;
     background-color: #03063e;
-    font-size: 20px;
-    letter-spacing: 1.5px;
+    font-size: 17px;
+    padding-bottom: 10px;
+    color: #d0d1d8;
     border-radius: 5px;
-    /* border: 3px solid #03063e; */
-    color: #d0d1d8
+    overflow: hidden;
 }
-
-/* Other card-related styles */
 
 .card-images {
     width: 100%;
-    height: 200px;
-    object-fit: cover;
+        height: 100px;
+      object-fit: cover;
+      border-bottom: #12edf2 3px solid;
 }
 
-/* Hover effect to enlarge the image */
 .card:hover {
     transform: scale(1.1);
-    /* Enlarge the image on hover */
 }
 
 .project-container1,
 .project-container2 {
     position: relative;
-    /* Ensures other content stays on top of the background */
     z-index: 1;
-    /* Make sure the content is above the background image */
-}
-
-.project-title {
-    font-size: 20px;
-    font-weight: 500;
-    font-family: 'Roboto';
-    color: white !important;
-    margin-bottom: 20px;
 }
 
 .skillspage-title {
@@ -625,8 +597,8 @@ button:hover {
     }
 
     .card {
-        width: calc(20% - 30px);
-        height: 300px;
+        width: calc(20% - 150px);
+        height: 177px;
     }
 
     .contact-title {
